extended conference search and application app to be able to create the conference talk
